--- a/foodZen/client/index.html
+++ b/foodZen/client/index.html
@@ -11,6 +11,7 @@
   <body>
     <div class="navigation" ng-controller="AuthController">
     <a class="logo"href="/#/">FoodZEN</a>
+    <a href="/#/map">Store Locator</a>
     <a href="/#/ingredients">Ingredients</a>
     <a href="/#/recipes">Recipes</a>
     <a href="/#/grocery">Groceries</a>
@@ -46,6 +47,7 @@
     <script src="app/services/groceryServices.js"></script>
     <script src="app/services/services.js"></script>
     <script src="app/auth/auth.js"></script>
+    <script src="app/map/map.js"></script>
     <script src="app/ingredients/ingredients.js"></script>
     <script src="app/grocery/grocery.js"></script>
     <script src="app/recipes/recipes.js"></script>
