--- a/foodZen/client/app/map/map.html
+++ b/foodZen/client/app/map/map.html
@@ -5,6 +5,7 @@
 
 <div class="ingredient-submission span4">
   <input class="input-lg" ng-model="map" placeholder="type zipcode here" ng-keypress="hitEnter($event, ingredient)">
+  <!-- disregard below -->
   <button class="btn-lg btn-primary" type="submit" ng-click="addIngredient(ingredient)">Submit Zipcode</button>
 </div>
 
