--- a/foodZen/client/app/map/map.html
+++ b/foodZen/client/app/map/map.html
@@ -4,9 +4,10 @@
 <h2>Find the Closest Store in Your Vicinity!</h2>
 
 <div class="ingredient-submission span4">
-  <input class="input-lg" ng-model="map" placeholder="type zipcode here" ng-keypress="hitEnter($event, ingredient)">
+  <input class="input-lg" ng-model="map" placeholder="example: Safeway" ng-keypress="hitEnter($event, input)">
   <!-- disregard below -->
-  <button class="btn-lg btn-primary" type="submit" ng-click="addIngredient(ingredient)">Submit Zipcode</button>
+  <button class="btn-lg btn-primary" type="submit" ng-click="addIngredient(ingredient)">Submit Query!</button>
 </div>
 
-
+<iframe width="600" height="450" frameborder="0" style="border:0"
+src="https://www.google.com/maps/embed/v1/search?q=grocery+stores&key=AIzaSyCYdI-lgb1JRIBP0dPdqsfIBe-slSQU4AI" allowfullscreen></iframe>
