initial set up for emailList from view to services

--- a/foodZen/client/app/grocery/grocery.html
+++ b/foodZen/client/app/grocery/grocery.html
@@ -20,7 +20,7 @@
 <div class="glist">
   <div class="grocerylist-submission">
   <input ng-model="Email" placeholder="Enter email address">
-    <button type="submit" ng-click="groceriesFromRecipes()">Share your list!</button>
+    <button type="submit" ng-click="emailList()">Share your list!</button>
     <input ng-model="newGrocery" placeholder="Add items">
     <button type="submit" ng-click="addGrocery()">add</button>
   </div>
