--- a/foodZen/client/app/map/map.html
+++ b/foodZen/client/app/map/map.html
@@ -1,9 +1,14 @@
 
 <h1>Store Locator</h1>
 
-<h2>Find the Closest Store in Your Vicinity!</h2>
+<h2>Find the Closest Stores in Your Vicinity!</h2>
+
+<div class="query-submission span4">
+  <input class="input-lg" ng-model="query" placeholder="example: Safeway" ng-keypress="hitEnter($event, input)">
+  <button class="btn-lg btn-primary" type="submit" ng-click="submitQuery()">Submit Query!</button>
+</div>
 
 <div class="maps" align="center">
-<iframe width="600" height="600" frameborder="0" style="border:0" 
-src="https://www.google.com/maps/embed/v1/search?q=grocery+stores&key=AIzaSyCYdI-lgb1JRIBP0dPdqsfIBe-slSQU4AI" allowfullscreen></iframe>
+  <iframe width="600" height="600" frameborder="0" style="border:0" ng-src="{{url}}" allowfullscreen></iframe>
 </div>
+
