Pull nutrition information from spoontacular api

--- a/foodZen/client/app/recipes/recipes.html
+++ b/foodZen/client/app/recipes/recipes.html
@@ -21,6 +21,7 @@
         </h3>
         <ul>
           <li class="recipe-table" ng-repeat="item in singleRecipe.recipe.data.extendedIngredients"> {{ item.originalString }}
+            <span ng-bind-html="data.nutri"></span>
           </li >
         </ul>
       </td>
