--- a/foodZen/client/app/grocery/grocery.html
+++ b/foodZen/client/app/grocery/grocery.html
@@ -19,7 +19,7 @@
 
 <div class="glist">
   <div class="grocerylist-submission">
-  <input ng-model="Email" placeholder="Enter email address">
+    <input ng-model="email" placeholder="Enter email address">
     <button type="submit" ng-click="emailList()">Share your list!</button>
     <input ng-model="newGrocery" placeholder="Add items">
     <button type="submit" ng-click="addGrocery()">add</button>
