Function written to convert XML data into array of values

--- a/foodZen/client/index.html
+++ b/foodZen/client/index.html
@@ -40,8 +40,10 @@
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
+    <!-- xml2json helps to convert xml/html to JSON -->
+    <script src="lib/x2js/xml2json.js"></script>    
     <script src="lib/angular-mocks/angular-mocks.js"></script>
-    <script src="lib/angular-sanitize/angular-sanitize.js"></script>    
+    <script src="lib/angular-sanitize/angular-sanitize.js"></script>
     <script src="lib/checklist-model/checklist-model.js"></script>
     <script src="app/services/auth-services.js"></script>
     <script src="app/services/groceryServices.js"></script>
