Add Collapsable div for nutrition information

--- a/foodZen/client/app/recipes/recipes.html
+++ b/foodZen/client/app/recipes/recipes.html
@@ -20,8 +20,8 @@
         Ingredients
         </h3>
         <ul>
-          <li class="recipe-table" font-weight="bold" ng-repeat="item in singleRecipe.recipe.data.extendedIngredients"> {{ item.originalString }}
-            <div>
+          <li class="recipe-table" font-weight="bold" ng-repeat="item in singleRecipe.recipe.data.extendedIngredients"><a ng-click="isCollapsed = !isCollapsed"> {{ item.originalString }} </a>
+            <div uib-collapse="isCollapsed" class="panel-body">
               <p>Calories: {{ item.nutri.Calories }}</p>
               <p>Protein: {{ item.nutri.Protein }}</p>
               <p>Total fat: {{ item.nutri.TotalFat }}</p>
