--- a/foodZen/client/index.html
+++ b/foodZen/client/index.html
@@ -42,6 +42,8 @@
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
     <script src="lib/angular-mocks/angular-mocks.js"></script>
+    <script src="lib/angular-animate/angular-animate.js"></script>
+    <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="lib/angular-sanitize/angular-sanitize.js"></script>
     <script src="lib/checklist-model/checklist-model.js"></script>
     <script src="app/services/auth-services.js"></script>
