--- a/foodZen/client/index.html
+++ b/foodZen/client/index.html
@@ -41,9 +41,9 @@
     <script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-route/angular-route.js"></script>
-
+    <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <!-- xml2json helps to convert xml/html to JSON -->
-    <script src="lib/x2js/xml2json.js"></script>
+    <script src="lib/x2js/xml2json.js"></script>    
     <script src="lib/angular-mocks/angular-mocks.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap.js"></script>
