--- a/foodZen/client/app/auth/signin.html
+++ b/foodZen/client/app/auth/signin.html
@@ -21,7 +21,7 @@
     </div>
   </form>
   <div class="row signin anchor">
-    <a class="col-md-4 col-md-offset-4" href="#/signup">Don't have an account?<strong>Sign Up!</strong> ...</a>
+    <a class="col-md-4 col-md-offset-4" href="#/signup">Don't have an account? <strong> Sign Up!</strong></a>
   </div>
 </div>
 </div>
