--- a/foodZen/client/app/auth/signup.html
+++ b/foodZen/client/app/auth/signup.html
@@ -11,6 +11,6 @@
     </div>
   </form>
   <div class="row anchor signup">
-  <a class="col-md-3 col-md-offset-5" href="#/signin">Already have an account? <strong>Signin</strong> ...</a>
+  <a class="col-md-3 col-md-offset-5" href="#/signin">Already have an account? <strong> Signin </strong></a>
   </div>
 </div>
